# rustic_telemetry_rabbit

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: consumer.rs  main.rs
