[package]
name = "rustic_telemetry_rabbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2.1.0"
futures-lite = "1.12.0"
lapin = "2.1.1"
opentelemetry = "0.17.0"
prima-tracing = { version= "0.3.1", features= ["prima-telemetry", "rt-tokio-current-thread"]}
tracing = "0.1.34"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = "0.3.11"
tokio = {version = "1", features = ["full"]}